# turret_aim_control

./: CMakeLists.txt  README.md  package.xml
config/default/: turret.yaml  turret_controller.yaml
include/: turret_controller.hpp
launch/: spawn_turret.launch.py
launch/descriptions/: assembly_description.launch.py  payload_description.launch.py
src/: turret_controller.cpp
turret_aim_control/: CMakeLists.txt  package.xml
turret_aim_control/config/default/: turret.yaml  turret_controller.yaml
turret_aim_control/config/default/interbotix/: modes.yaml  pxxls.yaml
turret_aim_control/include/: turret_controller.hpp
turret_aim_control/launch/: spawn_turret.launch.py
turret_aim_control/launch/descriptions/: assembly_description.launch.py  payload_description.launch.py
turret_aim_control/rviz/: spawn_turret.rviz
turret_aim_control/src/: target.cpp  turret_controller.cpp  turret_controller.py
turret_aim_control_interfaces/: CMakeLists.txt  package.xml
turret_aim_control_interfaces/srv/: AimEnable.srv  ControlTurret.srv
urdf/: payload.urdf.xacro
