<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>interbotix_turret_aim_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nick.chan@utexas.edu">nchan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS related dependencies -->
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- Interbotix dependencies -->
  <depend>interbotix_xs_msgs</depend>
  <depend>interbotix_xsturret_control</depend>
  <depend>interbotix_xsturret_descriptions</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
